--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,8 +56,19 @@ h3 {
 	top: 0;
 	opacity: 0.9;
 
+	h1 {
+		margin: 0;
+		a {
+			color: $secondary-color;
+			i.fas.fa-music {
+				color: $success-color;
+			}
+		}
+	}
+
 	ul {
 		display: flex;
+		align-items: center;
 	}
 
 	a {
@@ -69,10 +80,6 @@ h3 {
 		&:hover {
 			color: $secondary-color;
 		}
-	}
-
-	button {
-		height: 100%;
 	}
 }
 
